syntax = "proto2";

package fsearch;

import "common.proto";
import "google/protobuf/empty.proto";

option java_package = "com.mktiti.fsearch.grpc";

service UserService {

  rpc SelfData (google.protobuf.Empty) returns (UserInfo) {}

}

enum UserLevel {
  NORMAL = 1;
  PREMIUM = 2;
}

message UserInfo {
  required string registerDate = 1;
  required UserLevel level = 2;
  repeated QueryContext savedContexts = 3;
}